Add admin B2 reindex job
